--- a/AQI/CO2_Visualization.ipynb
+++ b/AQI/CO2_Visualization.ipynb
@@ -2347,6 +2347,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bfb48e7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import moviepy.editor as mp\n",
+    "import imageio\n",
+    "\n",
+    "# Input file (MKV) and output file (GIF)\n",
+    "input_file = \"AQI2.mp4\"\n",
+    "output_file = \"AQI_plot.gif\"\n",
+    "\n",
+    "# Load the MKV file\n",
+    "clip = mp.VideoFileClip(input_file)\n",
+    "\n",
+    "# Optionally, resize the clip to reduce the GIF file size\n",
+    "# clip = clip.resize(width=650)  # Change the width as needed\n",
+    "\n",
+    "# Set the desired fps\n",
+    "new_fps = 45\n",
+    "\n",
+    "# Write the clip as a GIF file with loop and increased fps\n",
+    "with imageio.get_writer(output_file, mode='I', loop=0, fps=new_fps) as writer:\n",
+    "    for t in range(int(clip.duration * new_fps)):\n",
+    "        writer.append_data(clip.get_frame(t * 1.0 / new_fps))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a6db548",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "e443cb74",
    "metadata": {},
