--- a/AQI/CO2_Visualization.ipynb
+++ b/AQI/CO2_Visualization.ipynb
@@ -2348,7 +2348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bfb48e7c",
    "metadata": {},
    "outputs": [],
@@ -2357,7 +2357,7 @@
     "import imageio\n",
     "\n",
     "# Input file (MKV) and output file (GIF)\n",
-    "input_file = \"AQI2.mp4\"\n",
+    "input_file = \"AQI.mp4\"\n",
     "output_file = \"AQI_plot.gif\"\n",
     "\n",
     "# Load the MKV file\n",
