--- a/AQI/CO2_Visualization.ipynb
+++ b/AQI/CO2_Visualization.ipynb
@@ -2377,11 +2377,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2a6db548",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from PIL import Image, ImageSequence\n",
+    "\n",
+    "input_gif = 'AQI_plot.gif'\n",
+    "output_gif = 'AQI.gif'\n",
+    "\n",
+    "# Set the crop coordinates (left, upper, right, lower)\n",
+    "crop_coordinates = (95, 10, 1203, 612)\n",
+    "\n",
+    "# Open the input GIF\n",
+    "input_image = Image.open(input_gif)\n",
+    "\n",
+    "# Create a list to store the cropped frames\n",
+    "cropped_frames = []\n",
+    "\n",
+    "# Iterate through the frames of the input GIF\n",
+    "for frame in ImageSequence.Iterator(input_image):\n",
+    "    # Crop the current frame using the specified crop coordinates\n",
+    "    cropped_frame = frame.crop(crop_coordinates)\n",
+    "    \n",
+    "    # Add the cropped frame to the list of cropped frames\n",
+    "    cropped_frames.append(cropped_frame)\n",
+    "\n",
+    "# Save the cropped frames as a new GIF\n",
+    "cropped_frames[0].save(output_gif, save_all=True, append_images=cropped_frames[1:], loop=input_image.info['loop'], duration=input_image.info['duration'])\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
