--- a/AQI/CO2_Visualization.ipynb
+++ b/AQI/CO2_Visualization.ipynb
@@ -2377,7 +2377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "2a6db548",
    "metadata": {},
    "outputs": [],
@@ -2385,7 +2385,7 @@
     "from PIL import Image, ImageSequence\n",
     "\n",
     "input_gif = 'AQI_plot.gif'\n",
-    "output_gif = 'AQI.gif'\n",
+    "output_gif = 'AQI_plot2.gif'\n",
     "\n",
     "# Set the crop coordinates (left, upper, right, lower)\n",
     "crop_coordinates = (95, 10, 1203, 612)\n",
