fixed colorscheme for AQI plot

--- a/AQI/CO2_Visualization.ipynb
+++ b/AQI/CO2_Visualization.ipynb
@@ -382,7 +382,7 @@
     "    # Plot the CO2 data with appropriate latitude and longitude coordinates\n",
     "    img = ax.pcolormesh(carbon_test.lon, carbon_test.lat,\n",
     "                        carbon_test.xco2[time_index,:,:], \n",
-    "                        cmap='viridis', transform=ccrs.PlateCarree())\n",
+    "                        cmap='viridis_r', transform=ccrs.PlateCarree())\n",
     "\n",
     "    # Add gridlines and labels for latitude and longitude\n",
     "    gl = ax.gridlines(draw_labels=True, linestyle='--', alpha= 1.0 )\n",
@@ -411,7 +411,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "821554f5ca744a04a58e30d7d2fc4700",
+       "model_id": "8de64184615d4f74957e0f7e3b15c92d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1593,11 +1593,11 @@
     "    # Plot the AQI values from the reshaped DataFrame with appropriate latitude and longitude coordinates\n",
     "    img = ax.scatter(AQI[\"Longitude\"], AQI_reshaped[\"Latitude\"], \n",
     "                     c=AQI_reshaped[time_index], \n",
-    "                     cmap=\"viridis\", vmin=AQI[\"AQI\"].min(), vmax=AQI[\"AQI\"].max(),\n",
+    "                     cmap=\"viridis_r\", vmin=AQI[\"AQI\"].min(), vmax=AQI[\"AQI\"].max(),\n",
     "                     transform=ccrs.PlateCarree())\n",
     "    \n",
     "    # Plot the GeoDataFrame with the given column name\n",
-    "    oregon_geo.plot(column=col_name, cmap='viridis', \n",
+    "    oregon_geo.plot(column=col_name, cmap='viridis_r', \n",
     "                    linewidth=0.8, ax=ax, edgecolor='0.8', legend=True)\n",
     "    \n",
     "    # Set the plot title\n",
@@ -1843,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "id": "d1d8d3f7",
    "metadata": {},
    "outputs": [],
@@ -1855,7 +1855,7 @@
     "    fig, ax = plt.subplots(1, 1, figsize=(6, 3))\n",
     "    \n",
     "    # Plot the AQI values for the specific time index using pivoted and filtered data.\n",
-    "    oregon_geo_pivoted_new[oregon_geo_pivoted_new['time_index'] == time_index].plot(column='AQI', cmap='viridis', \n",
+    "    oregon_geo_pivoted_new[oregon_geo_pivoted_new['time_index'] == time_index].plot(column='AQI', cmap='viridis_r', \n",
     "                    linewidth=0.8, ax=ax, edgecolor='0.8', legend=True, vmin=vmin, vmax=vmax)\n",
     "    \n",
     "    # Add the Oregon state boundary to the plot.\n",
@@ -2356,14 +2356,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "id": "bd9a7caf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55cc6cd1e97b4c6897c4b961933f3f28",
+       "model_id": "48cf4bf7538a41bf87d332a19dcef22e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2380,7 +2380,7 @@
        "<function __main__.plot_oregonAQI(time_index)>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2396,6 +2396,14 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "041313eb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
