--- a/AQI/CO2_Visualization.ipynb
+++ b/AQI/CO2_Visualization.ipynb
@@ -411,7 +411,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8de64184615d4f74957e0f7e3b15c92d",
+       "model_id": "f54024274e084f8da67f289cae91e2f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1843,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "id": "d1d8d3f7",
    "metadata": {},
    "outputs": [],
@@ -2356,14 +2356,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "id": "bd9a7caf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48cf4bf7538a41bf87d332a19dcef22e",
+       "model_id": "47a073c32c66419f849f4100cd25a96c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2380,7 +2380,7 @@
        "<function __main__.plot_oregonAQI(time_index)>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2399,11 +2399,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "041313eb",
+   "execution_count": 48,
+   "id": "8f6e1da4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import moviepy.editor as mp\n",
+    "import imageio\n",
+    "\n",
+    "# Input file (MKV) and output file (GIF)\n",
+    "input_file = \"new2.mkv\"\n",
+    "output_file = \"AQI_plot.gif\"\n",
+    "\n",
+    "# Load the MKV file\n",
+    "clip = mp.VideoFileClip(input_file)\n",
+    "\n",
+    "# Optionally, resize the clip to reduce the GIF file size\n",
+    "#clip = clip.resize(width=850)  # Change the width as needed\n",
+    "\n",
+    "# Set the desired fps\n",
+    "new_fps = 45\n",
+    "\n",
+    "\n",
+    "# Write the clip as a GIF file with loop and increased fps\n",
+    "with imageio.get_writer(output_file, mode='I', loop=0, fps=new_fps) as writer:\n",
+    "    for t in range(int(clip.duration * new_fps)):\n",
+    "        writer.append_data(clip.get_frame(t * 1.0 / new_fps))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "42d09fe0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image, ImageSequence\n",
+    "\n",
+    "input_file = \"AQI_plot.gif\"\n",
+    "output_file = \"AQI_plot3.gif\"\n",
+    "\n",
+    "# Set the crop coordinates (left, upper, right, lower)\n",
+    "crop_coordinates = (95, 5, 1135, 550)\n",
+    "\n",
+    "# Open the input GIF file\n",
+    "input_image = Image.open(input_file)\n",
+    "\n",
+    "# Initialize an empty list to store the cropped frames\n",
+    "cropped_frames = []\n",
+    "\n",
+    "# Iterate through the frames of the input GIF\n",
+    "for frame in ImageSequence.Iterator(input_image):\n",
+    "    # Crop the current frame using the specified crop coordinates\n",
+    "    cropped_frame = frame.crop(crop_coordinates)\n",
+    "    # Add the cropped frame to the list of cropped frames\n",
+    "    cropped_frames.append(cropped_frame)\n",
+    "\n",
+    "# Save the cropped frames as a new GIF\n",
+    "cropped_frames[0].save(output_file, save_all=True, append_images=cropped_frames[1:], loop=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "592ac291",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "|"
+   ]
   }
  ],
  "metadata": {
